[package]
name = "rataui-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
backtrace = "0.3.69"
crossbeam-channel = { version = "0.5.8", features = ["crossbeam-utils"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
env_logger = "0.10.0"
log = "0.4.20"
ratatui = { version = "0.23.0", features = ["all-widgets", "macros"] }
scopeguard = "1.2.0"
